updated streamlit with call of the flask backend

--- a/config_public.yaml
+++ b/config_public.yaml
@@ -18,3 +18,5 @@ GENAI:
     Manuscript title: {title}
     Manuscript abstract: {abstract}
   CONTEXT_PROMPT: MDPI journals:\n{context}
+STREAMLIT:
+  BACKEND_URL: http://127.0.0.1:5000/recommend_streamlit
