--- a/config_public.yaml
+++ b/config_public.yaml
@@ -1,5 +1,5 @@
 DATA:
-  JOURNALS_PATH: ../data/journals.csv
+  JOURNALS_PATH: /app/data/journals.csv
   JOURNALS_URL: https://www.mdpi.com/about/journals
   HEADERS: {"User-Agent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/83.0.4103.61 Safari/537.36"}
 GENAI:
